--- a/style/info511.scss
+++ b/style/info511.scss
@@ -12,15 +12,14 @@ color: #1E5288;
 
 
 .render-commit-push {
-  padding: 0.5em 0.5em 0em 3em;
+  padding: 0.5em 0.5em 0em 4em; /* Increased left padding from 3em to 4em */
   margin-top: 5px;
   margin-bottom: 5px;
-  background: #F4EDE5 5px center/3em no-repeat;
+  background: #E2E9EB center left/3em no-repeat;
   border-top: 1px solid #0C234B;
   border-bottom: 1px solid #0C234B;
   background-image: url("img/render-commit-push.png");
-  background-size: 2em;
-  background-position: 0.5em 0.5em;
+  background-size: 1.25em;
 }
 
 .pull {
